--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,13 @@
   <%= csrf_meta_tags %>
   <meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+		<meta property="og:title" content="ENTP."/>
+		<meta property="og:image" content="/public/banner_02.jpg"/>
+		<meta property="og:site_name" content="ENTP"/>
+		<meta property="og:url" content="www.entp.io"/>
+		<meta property="og:description" content="Get Sh*t Done."/>
+
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="css/font-awesome.css">
 		<link rel='stylesheet' id='camera-css'  href='css/camera.css' type='text/css' media='all'>
