--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<meta property="og:title" content="ENTP."/>
-		<meta property="og:image" content="https://www.entp.io/public/banner_02.jpg"/>
+		<meta property="og:image" img src="public/banner_02.jpg"/>
 		<meta property="og:site_name" content="ENTP"/>
 		<meta property="og:url" content="www.entp.io"/>
 		<meta property="og:description" content="Get Sh*t Done."/>
-		<meta property="og:type" content="article"/>
+		
 
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="css/font-awesome.css">
