updated text for aprtners

--- a/app/views/home/homepage.html.erb
+++ b/app/views/home/homepage.html.erb
@@ -304,7 +304,7 @@
 			<div class="row aboutUs">
 				<div class="col-md-12 ">
 					<h3>Our Partners</h3>
-					<h4>Collaboratively our team has organised events with :</h4>
+					<h4>Collaboratively our team has worked with :</h4>
 				</div>
 			</div>
 		</div>
