--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<meta property="og:title" content="ENTP."/>
-		<meta property="og:image" img src="images/banner.jpg"/>
+		<meta property="og:image" img src="http://www.entp.io/images/picStories/christine02.png"/>
 		<meta property="og:site_name" content="ENTP"/>
 		<meta property="og:url" content="www.entp.io"/>
 		<meta property="og:description" content="Get Sh*t Done."/>
