--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,9 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
+
+  
   <meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -27,6 +30,7 @@
 
 		<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
+
 
 
 		<script type="text/javascript" src="js/jquery.mobile.customized.min.js"></script>
@@ -56,7 +60,9 @@
 </head>
 <body>
 
+<div class="container-fluid">
 <%= yield %>
+</div>
 
 </body>
 </html>
