--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,8 +27,8 @@ body{
 	position: relative;
 	width: 100%;
 	overflow: hidden;
-	height:100%;
-	background: url(../images/bgTop.jpg) center center no-repeat;
+	height:80%;
+	background: url(../images/bgTop1.jpg) center center no-repeat;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -63,6 +63,9 @@ body{
 }
 
 
+#home	{
+	height: 700px;
+}
 
 .logo{
 	margin-top: 60px;
