--- a/app/views/home/pitch-presentation.html.erb
+++ b/app/views/home/pitch-presentation.html.erb
@@ -1,8 +1,8 @@
 <table style="width:100%">
 <div id="left"><h3>Pitch<br>Presentation</h3></div>
-<div id="right" class="button">
-<%= link_to "GO BACK", root_path, :class=>"btn" %></td>
-</div>
+<div id="right" >
+	<a href="hackthehouse" class="btn">Go BACK</a>
+	</div>
 <div class="clear"></div>
 </table>
    
