--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 
 
-  
+
   <meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -60,7 +60,7 @@
 </head>
 <body>
 
-<div class="container-fluid">
+<div class="container-fluid" style="padding:0!important;">
 <%= yield %>
 </div>
 
