--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,7 +26,7 @@
 }
 
 h1 {
-font-family: 'Open Sans', sans-serif;
+font-family: 'Open Sans', sans-serif!important;
 color: #fff!important;
 text-transform: uppercase;
 font-weight: 300;
@@ -235,7 +235,7 @@ margin-top: 0;
 }
 
  #menuleft a   {
-  margin: 15px 0 15px 20px;
+  margin: 15px 0 15px 15px;
   background: #132647;
   display:inline-block;
   cursor:pointer;
@@ -252,7 +252,7 @@ margin-top: 0;
   background:#d22d1d;
   display:inline-block;
   cursor:pointer;
-  color:#ffffff;
+  color:#ffffff!important;
 }
 
 #menuleft a.activ {
