--- a/app/views/home/checklist.html.erb
+++ b/app/views/home/checklist.html.erb
@@ -1,7 +1,7 @@
 <div id="head">
 	<div id="left"><h3>Information</h3></div>
-	<div id="right" class="button">
-	<%= link_to "GO BACK", root_path, :class=>"btn" %></td>
+	<div id="right" >
+	<a href="hackthehouse" class="btn">Go BACK</a>
 	</div>
 	<div class="clear"></div>
 </div>
