--- a/app/views/home/homepage.html.erb
+++ b/app/views/home/homepage.html.erb
@@ -1,17 +1,60 @@
- <!--home start-->
-    
-    <div id="home">
-    	<div class="headerLine">
-	<div id="menuF" class="default">
-		<div class="container">
-			
+<div id="home">
+<div class="headerLine">
+<div id="menuF" class="default">
+	<div class="container">
+		<div class="row">
+			<div class="logo col-md-4">
+				<div>
+					<a href="#">
+					<img src="images/logo.png">
+					</a>
+				</div>
+			</div>
+			<!--<div class="col-md-8">
+				<div class="navmenu"style="text-align: center;">
+					<ul id="menu">
+						<li class="active" ><a href="#home">Home</a></li>
+						<li><a href="#about">About</a></li>
+						<li><a href="#partners">Partners</a></li>
+						<li class="last"><a href="#contact">Contact</a></li>
+		<!--li><a href="#features">Features</a></li
+					</ul>
+				</div>
+				</div>-->
 		</div>
 	</div>
-		<div class="container">
-			
+</div>
+	<div class="container" >
+		<div class="row wrap">
+			<div class="col-md-12 gallery"> 
+				<div class="camera_wrap camera_white_skin" id="camera_wrap_1">
+					<div data-thumb="" data-src="images/slides/blank.gif">
+						<div class="img-responsive camera_caption fadeFromBottom">
+						<h2>We provide tools.</h2>
+						</div>
+					</div>
+					<div data-thumb="" data-src="images/slides/blank.gif">
+						<div class="img-responsive camera_caption fadeFromBottom">
+						<h2>We run events.</h2>
+						</div>
+					</div>
+					<div data-thumb="" data-src="images/slides/blank.gif">
+						<div class="img-responsive camera_caption fadeFromBottom">
+						<h2>We share stories.</h2>
+						</div>
+					</div>
+					<div data-thumb="" data-src="images/slides/blank.gif">
+						<div class="img-responsive camera_caption fadeFromBottom">
+						<h2>We print accessories.</h2>
+						</div>
+					</div>
+				</div><!-- #camera_wrap_1 -->
+			</div>
 		</div>
 	</div>
-	
+</div>
+
+
     <!--about start-->   
     
     <div id="about">
