--- a/app/views/home/brief.html.erb
+++ b/app/views/home/brief.html.erb
@@ -1,4 +1,5 @@
-<div id="head">
+<div class="container-fluid">
+	<div id="head">
 	<div id="left"><h3>Information</h3></div>
 	<div id="right" >
 	<a href="hackthehouse" class="btn">Go BACK</a>
@@ -60,6 +61,6 @@ Unilever Homecare has partnered with the leaders of the on-demand economy and e-
 
 </div>
 	</div>
-
+</div>
 
 
