--- a/app/views/home/customer-validation.html.erb
+++ b/app/views/home/customer-validation.html.erb
@@ -1,4 +1,5 @@
-<table style="width:100%">
+<div class="container-fluid">
+	<table style="width:100%">
 <div id="left"><h3>Customer<br>Validation</h3></div>
 <div id="right" >
 	<a href="hackthehouse" class="btn">Go BACK</a>
@@ -14,4 +15,5 @@
  <iframe id="frame1" scrolling="yes" style="border:none" width="100%" height="700px"> </iframe>
 
 
+</div>
 </div>
