--- a/app/views/home/information.html.erb
+++ b/app/views/home/information.html.erb
@@ -1,4 +1,5 @@
-<div id="head">
+<div class="container-fluid">
+	<div id="head">
 	<div id="left"><h3>Information</h3></div>
 	<div id="right" >
 	<a href="hackthehouse" class="btn">Go BACK</a>
@@ -22,3 +23,4 @@
 
 </div>
 
+</div>
