--- a/app/views/home/agenda.html.erb
+++ b/app/views/home/agenda.html.erb
@@ -1,4 +1,5 @@
-<div id="head">
+<div class="container-fluid">
+	<div id="head">
 	<div id="left"><h3>Information</h3></div>
 	<div id="right" >
 	<a href="hackthehouse" class="btn">Go BACK</a>
@@ -20,6 +21,7 @@
 		<img src="images/agenda.png"  alt="...">
 
 	</div>
+</div>
 
 
 
