--- a/app/views/home/criteria.html.erb
+++ b/app/views/home/criteria.html.erb
@@ -1,4 +1,5 @@
-<div id="head">
+<div class="container-fluid">
+	<div id="head">
 	<div id="left"><h3>Information</h3></div>
 	<div id="right" >
 	<a href="hackthehouse" class="btn">Go BACK</a>
@@ -19,5 +20,6 @@
 	<img src="images/criteria.png"  alt="...">
 
 	</div>
+</div>
 
 
