--- a/app/views/home/inspirations.html.erb
+++ b/app/views/home/inspirations.html.erb
@@ -1,4 +1,5 @@
-<table style="width:100%">
+<div class="container-fluid">
+	<table style="width:100%">
 <div id="left"><h3>Inspiration</h3></div>
 <div id="right" >
 	<a href="hackthehouse" class="btn">Go BACK</a>
@@ -14,5 +15,5 @@
 	 <div class="col-md-10">
  <iframe id="frame1" scrolling="yes" style="border:none" width="100%" height="700px"> </iframe>
 
-
+</div>
 </div>
