--- a/app/views/home/prizes.html.erb
+++ b/app/views/home/prizes.html.erb
@@ -1,4 +1,5 @@
-<div id="head">
+<div class="container-fluid">
+	<div id="head">
 	<div id="left"><h3>Information</h3></div>
 	<div id="right" >
 	<a href="hackthehouse" class="btn">Go BACK</a>
@@ -39,7 +40,7 @@
 	<div class="clear"></div>
 	</div>
 	</div>
-
+</div>
 
 
 
