--- a/app/views/home/homepage.html.erb
+++ b/app/views/home/homepage.html.erb
@@ -189,7 +189,7 @@
 		
 		
 		
-		<div class="container">
+		<div class="container" style="background:#fff;padding:0!important;">
 			<div class="row">
 				<div class="col-md-12 wwa">
 					<span name="about" ></span>
@@ -198,7 +198,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="container">
+		<div class="container" style="background:#fff;padding:0!important;">
 			<div class="row team">
 				<div class="col-md-3 b1">
 						<img class="img-responsive" src="images/picTeam/arman.png">
@@ -253,7 +253,7 @@
 		
 			</div>
 		</div>
-		<div class="container">
+		<!--<div class="container">
 			<div class="row">
 				<div class="col-md-12 hr1">
 					<hr/>
@@ -315,8 +315,8 @@
 				</div>
 			</div>
 		</div>	
-		
-		<div class="container">
+		-->
+		<div class="container" style="background:#fff;padding:0!important;">
 			<div class="row">
 				<div class="col-md-12 hr1">
 					<hr/>
@@ -335,7 +335,7 @@
 		
 		<div style="position: relative;">
 		
-			<div class="container">
+			<div class="container" style="background:#fff;padding:0!important;">
 				<ul class="partners" style="margin-top:60px;">
 					<li><a href="http://ucle.co/" target="_blank"><img class="img-responsive"  src="images/picPartners/ucle-old-logo.png"/></li>
 					<li><a href="https://www.warwicksu.com/societies/entrepreneurs/" target="_blank"><img class="img-responsive"  src="images/picPartners/University_of_Warwick_logo.png"/></li>
