--- a/app/views/home/homepage.html.erb
+++ b/app/views/home/homepage.html.erb
@@ -324,7 +324,7 @@
 			</div>
 		</div>
 		
-		<div id="partners" class="container">
+		<div id="partners" class="container" style="background:#fff;padding:0!important;">
 			<div class="row aboutUs">
 				<div class="col-md-12 ">
 					<h3>Our Partners</h3>
@@ -361,10 +361,10 @@
     <!--contact start-->
  
  
-		<div class="container" id="contact">
+		<div class="container" id="contact" style="margin-top:0!important;">
 			<div class="row aboutUs">
 				<div class="col-md-12 ">
-					<h3>Contact us</h3>
+					<h3><br><br><br>Contact us</h3>
 					<h4>Get in touch with our team</h4>
 				</div>
 			</div> 
