--- a/app/views/home/homepage.html.erb
+++ b/app/views/home/homepage.html.erb
@@ -364,7 +364,7 @@
 		<div class="container" id="contact" style="margin-top:0!important;">
 			<div class="row aboutUs">
 				<div class="col-md-12 ">
-					<h3><br><br><br>Contact us</h3>
+					<h3><br>Contact us</h3>
 					<h4>Get in touch with our team</h4>
 				</div>
 			</div> 
