--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -734,10 +734,10 @@ pre code {
   overflow-y: scroll;
 }
 .container {
-  padding-right: 15px;
-  padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  padding: 0 15px!important;
+  width: 100%;
 }
 @media (min-width: 768px) {
   .container {
