--- a/app/views/home/business-model.html.erb
+++ b/app/views/home/business-model.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<body><div class="container-fluid">
 	<table style="width:100%">
 <div id="left"><h3>Business<br>Model</h3></div>
 <div id="right" >
@@ -18,3 +18,4 @@
 
 </div>
 </div>
+</body>
