--- a/app/views/home/checklist.html.erb
+++ b/app/views/home/checklist.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<body><div class="container-fluid">
 	<div id="head">
 	<div id="left"><h3>Information</h3></div>
 	<div id="right" >
@@ -58,5 +58,5 @@
 	</div>
 </div>
 
-
+</body>
 
