--- a/app/views/home/hackthehouse.html.erb
+++ b/app/views/home/hackthehouse.html.erb
@@ -1,4 +1,4 @@
-
+<body>
 
 <div class="jumbotron">
   <img src="images/foundry.png" style="width:18%; min-width:180px;" class="imgcenter" alt="...">
@@ -141,3 +141,5 @@
     </li>
   </ul>
 </div>
+
+</body>
