--- a/app/views/home/homepage.html.erb
+++ b/app/views/home/homepage.html.erb
@@ -1,4 +1,4 @@
-<div id="home">
+<body style="background:#fff!important;"><div id="home">
 <div class="headerLine">
 <div id="menuF" class="default">
 	<div class="container">
@@ -189,7 +189,7 @@
 		
 		
 		
-		<div class="container" style="background:#fff;padding:0!important;">
+		<div class="container">
 			<div class="row">
 				<div class="col-md-12 wwa">
 					<span name="about" ></span>
@@ -198,7 +198,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="container" style="background:#fff;padding:0!important;">
+		<div class="container">
 			<div class="row team">
 				<div class="col-md-3 b1">
 						<img class="img-responsive" src="images/picTeam/arman.png">
@@ -253,7 +253,7 @@
 		
 			</div>
 		</div>
-		<!--<div class="container">
+		<div class="container">
 			<div class="row">
 				<div class="col-md-12 hr1">
 					<hr/>
@@ -315,8 +315,8 @@
 				</div>
 			</div>
 		</div>	
-		-->
-		<div class="container" style="background:#fff;padding:0!important;">
+		
+		<div class="container">
 			<div class="row">
 				<div class="col-md-12 hr1">
 					<hr/>
@@ -324,7 +324,7 @@
 			</div>
 		</div>
 		
-		<div id="partners" class="container" style="background:#fff;padding:0!important;">
+		<div id="partners" class="container">
 			<div class="row aboutUs">
 				<div class="col-md-12 ">
 					<h3>Our Partners</h3>
@@ -335,7 +335,7 @@
 		
 		<div style="position: relative;">
 		
-			<div class="container" style="background:#fff;padding:0!important;">
+			<div class="container">
 				<ul class="partners" style="margin-top:60px;">
 					<li><a href="http://ucle.co/" target="_blank"><img class="img-responsive"  src="images/picPartners/ucle-old-logo.png"/></li>
 					<li><a href="https://www.warwicksu.com/societies/entrepreneurs/" target="_blank"><img class="img-responsive"  src="images/picPartners/University_of_Warwick_logo.png"/></li>
@@ -361,10 +361,10 @@
     <!--contact start-->
  
  
-		<div class="container" id="contact" style="margin-top:0!important;">
+		<div class="container" id="contact">
 			<div class="row aboutUs">
 				<div class="col-md-12 ">
-					<h3><br>Contact us</h3>
+					<h3>Contact us</h3>
 					<h4>Get in touch with our team</h4>
 				</div>
 			</div> 
@@ -513,3 +513,5 @@
 			
 		});
 	</script>
+
+</body>
