--- a/app/views/home/agenda.html.erb
+++ b/app/views/home/agenda.html.erb
@@ -1,4 +1,5 @@
-<div class="container-fluid">
+<body>
+	<div class="container-fluid">
 	<div id="head">
 	<div id="left"><h3>Information</h3></div>
 	<div id="right" >
@@ -22,6 +23,5 @@
 
 	</div>
 </div>
-
-
+</body>
 
