--- a/app/views/home/pitch-presentation.html.erb
+++ b/app/views/home/pitch-presentation.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<body><div class="container-fluid">
 	<table style="width:100%">
 <div id="left"><h3>Pitch<br>Presentation</h3></div>
 <div id="right" >
@@ -16,4 +16,4 @@
 
 
 </div>
-</div>
+</div></body>
