--- a/app/views/home/prizes.html.erb
+++ b/app/views/home/prizes.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<body><div class="container-fluid">
 	<div id="head">
 	<div id="left"><h3>Information</h3></div>
 	<div id="right" >
@@ -41,6 +41,6 @@
 	</div>
 	</div>
 </div>
-
+</body>
 
 
