--- a/app/views/home/technology.html.erb
+++ b/app/views/home/technology.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<body><div class="container-fluid">
 	<table style="width:100%">
 <div id="left"><h3>Technology</h3></div>
 <div id="right" >
@@ -19,3 +19,4 @@
 
 </div>
 </div>
+</body>
