--- a/app/views/home/brief.html.erb
+++ b/app/views/home/brief.html.erb
@@ -32,16 +32,16 @@ Unilever Homecare has partnered with the leaders of the on-demand economy and e-
 
 	<br><br><br>
 		<div class="brieflist">
-	    <a href="https://www.dollarshaveclub.com/" target="_blank">
+	    <a href="/dollar-shave-club" target="_blank">
 	<img src="images/brieflogo1.png"  alt="..." title="" class="left">
 		</a>
-		<a href="http://www.getwashio.com/" target="_blank">
+		<a href="/washio" target="_blank">
 	<img src="images/brieflogo3.png"  alt="..." title="" class="left">
 		</a>	
-		<a href="https://www.honest.com/" target="_blank">
+		<a href="/honest-company" target="_blank">
 	<img src="images/brieflogo2.png"  alt="..." title="" class="left">
  		</a>
- 		<a href="https://www.taskrabbit.co.uk/" target="_blank">
+ 		<a href="/task-rabbit" target="_blank">
 	<img src="images/brieflogo4.png"  alt="..." title="" class="left">
 		</a>
 	<div class="clear"></div>
@@ -51,14 +51,14 @@ Unilever Homecare has partnered with the leaders of the on-demand economy and e-
 		What themes are common in<br>these rapidly growing start-ups? 
 	</div>
 	<img src="images/brief2.png"  alt="...">
-<!--
+
 	<div class="checkout"><br>
 		Check out more examples<br>to get inspired from!
 		<div id="center" class="button">
 		<br><br>
-		<a href="inspirations" style="width:150px;"class="btn">Inspirations</a>
+		<a href="dollar-shave-club" style="width:150px;"class="btn">Inspiration</a>
 		</div>
-	</div>-->
+	</div>
 
 </div>
 	</div>
