--- a/app/views/home/checklist.html.erb
+++ b/app/views/home/checklist.html.erb
@@ -19,7 +19,7 @@
 	 <div class="col-md-10">
 	 	<div class="insidecontent" >
 		<img src="images/checklist.png"  alt="...">
-		<div class="checkoutleft">Ready to Hack?<br>Don't forget to bring with you this weekend : </div>
+		<div class="checkoutleft">Ready to Hack?<br>Don't forget to bring these items with you this weekend : </div>
 			<table class="checklist">
     		<tr>
         		<td>
