--- a/app/views/home/hackthehouse.html.erb
+++ b/app/views/home/hackthehouse.html.erb
@@ -23,10 +23,10 @@
 
 
   <div class="col-sm-6 col-md-4">
-   <a href="/inspirations" class="boxa" > <div class="boxsoon">
+   <a href="/dollar-shave-club" class="boxa" > <div class="box">
       <div class="caption">
         <p>
-          <h2>INSPIRATIONS</h2>
+          <h2>INSPIRATION</h2>
        </p>
       </div>
     </div></a>
