--- a/app/views/home/inspirations.html.erb
+++ b/app/views/home/inspirations.html.erb
@@ -1,20 +1,29 @@
-<body><div class="container-fluid">
-	<table style="width:100%">
-<div id="left"><h3>Inspiration</h3></div>
-<div id="right" >
+<body>
+	<div class="container-fluid">
+	<div id="head">
+	<div id="left"><h3>Inspiration</h3></div>
+	<div id="right" >
 	<a href="hackthehouse" class="btn">Go BACK</a>
 	</div>
-<div class="clear"></div>
-</table>
-   
+	<div class="clear"></div>
+</div>
 
-<div class="row">
-	<div class="col-md-2" id="menuleft">
-		<a id="b4"><h4>Live Soon!</h4></a>
+
+<div class="row" style="margin-top:100px;">
+	<div class="col-md-2" id="menuleft" >
+		<a id="b4" class="activ" href="dollar-shave-club" ><h4>Dollar Shave Club</h4></a>
+		<a id="b4" href="birchbox" ><h4>Birchbox</h4></a>
+		<a id="b1" href="washio"><h4>Washio</h4></a>
+		<a id="b1" href="honest-compagny"><h4>The Honest Compagny</h4></a>
+		<a id="b2" href="task-rabbit" ><h4>Task Rabbit</h4></a>
+		<a id="b3" href="hassle" ><h4>Hassle</h4></a>
+		<a id="b3" href="epantry" ><h4>EPantry</h4></a>
+		<a id="b3" href="bizzby" ><h4>Bizzby</h4></a>
 	</div>
 	 <div class="col-md-10">
- <iframe id="frame1" scrolling="yes" style="border:none" width="100%" height="700px"> </iframe>
-
-</div>
+	 	<div class="insidecontent" >
+	 		<iframe width="560" height="315" src="https://www.youtube.com/embed/ZUG9qYTJMsI" frameborder="0" allowfullscreen></iframe>
+	 	</div>
+	</div>
 </div>
 </body>
