--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -277,7 +277,6 @@ body {
   font-size: 14px;
   line-height: 1.42857143;
   color: #000;
-  background-color: #fff;
 }
 input,
 button,
@@ -760,6 +759,7 @@ pre code {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  padding-bottom: 150px;
 }
 .row {
   margin-right: -15px;
@@ -2001,7 +2001,7 @@ select[multiple].input-lg {
   padding: 6px 12px;
   margin-bottom: 0;
   font-size: 14px;
-  font-weight: normal;
+  font-weight: 200!important;
   line-height: 1.42857143;
   text-align: center;
   white-space: nowrap;
@@ -2014,6 +2014,7 @@ select[multiple].input-lg {
   background-image: none;
   border: 1px solid transparent;
   border-radius: 4px;
+  color: #fff;
 }
 .btn:focus,
 .btn:active:focus,
@@ -2021,10 +2022,11 @@ select[multiple].input-lg {
   outline: thin dotted;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
+
 }
 .btn:hover,
 .btn:focus {
-  color: #000;
+  color: #fff;
   text-decoration: none;
 }
 .btn:active,
