--- a/app/views/home/hackthehouse.html.erb
+++ b/app/views/home/hackthehouse.html.erb
@@ -131,7 +131,7 @@
     </li>
     <li>
       <a href="http://www.twillio.com/" target="_blank">
-          <img src="images/twilio.png"  alt="...">
+          <img src="images/Twilio.png"  alt="...">
       </a>
     </li>
     <li>
